k8s/app-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: secure-password-generator-ingress
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/password`)
    kind: Rule
    services:
    - name: service-secure-password-generator
      port: 80
